Fix to overflow in main wrapper on the homepage

--- a/app/(root)/home.module.css
+++ b/app/(root)/home.module.css
@@ -6,6 +6,7 @@
 
 .home {
   height: 100vh;
+  overflow: hidden;
 }
 
 .intro {
